fix(ui): section.search z-index

--- a/cotoami_desktop/ui/assets/css/app/_app.scss
+++ b/cotoami_desktop/ui/assets/css/app/_app.scss
@@ -37,7 +37,7 @@ div.app {
         // Prevent search pane from being hidden by other panes
         >div.separator,
         section.search * {
-          z-index: 1000;
+          z-index: 200;
         }
       }
     }
